deploy: 82780298bbb00d44dc3e0cb28f92fd7ac4addab9

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"api-examples.md\":\"CqSSqSxc\",\"index.md\":\"Cm-XOyPE\",\"markdown-examples.md\":\"BgyhqAA-\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"form-cook\",\"description\":\"基于 Vue3 的低代码可视化表单设计器,数据驱动，可视化界面搭建，提高开发者对表单的开发效率，让表单实现更简单。\",\"base\":\"/form-cook/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"logo\":\"/logo_fc.png\",\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/is-zhou/form-cook\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false,\"additionalConfig\":{}}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"api-examples.md\":\"CqSSqSxc\",\"index.md\":\"DH08qIyA\",\"markdown-examples.md\":\"BgyhqAA-\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"form-cook\",\"description\":\"基于 Vue3 的低代码可视化表单设计器,数据驱动，可视化界面搭建，提高开发者对表单的开发效率，让表单实现更简单。\",\"base\":\"/form-cook/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"logo\":\"/logo_fc.png\",\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/is-zhou/form-cook\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false,\"additionalConfig\":{}}");</script>
     
   </body>
 </html>
