deploy: a077b5fc48adb34146794617fd53804f3097bf69

--- a/api-examples.html
+++ b/api-examples.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/form-cook/assets/style.OqYgtnMh.css" as="style">
     <link rel="preload stylesheet" href="/form-cook/vp-icons.css" as="style">
     
-    <script type="module" src="/form-cook/assets/app.jnfmpFQ6.js"></script>
+    <script type="module" src="/form-cook/assets/app.BHk20Jr9.js"></script>
     <link rel="preload" href="/form-cook/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/form-cook/assets/chunks/theme.C8T7o-sl.js">
+    <link rel="modulepreload" href="/form-cook/assets/chunks/theme.Bm63kvwN.js">
     <link rel="modulepreload" href="/form-cook/assets/chunks/framework.CguDxmSa.js">
     <link rel="modulepreload" href="/form-cook/assets/api-examples.md.CqSSqSxc.lean.js">
     <link rel="icon" href="/form-cook/favicon.ico">
