--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/form-cook/assets/style.OqYgtnMh.css" as="style">
     <link rel="preload stylesheet" href="/form-cook/vp-icons.css" as="style">
     
-    <script type="module" src="/form-cook/assets/app.jnfmpFQ6.js"></script>
+    <script type="module" src="/form-cook/assets/app.BHk20Jr9.js"></script>
     <link rel="preload" href="/form-cook/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="icon" href="/form-cook/favicon.ico">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
